# cherrymx

./: Cargo.toml  README.md
src/: animator.rs  app_main_ui.rs  app_state.rs  commands.rs  lib.rs  main.rs  mxlp21_keyboard.rs
src/effect/: breathing_effect.rs  effect.rs  mod.rs  no_effect.rs  wave_effect.rs
src/service/: hotplug.rs  mod.rs  mxlp21_keyboard.rs
src/ui/: dialog.rs
src/util/: color.rs  css_provider.rs  mod.rs  ser_de_rc_refcell.rs  settings.rs
src/widgets/: buttons.rs  keyboard.rs  main_content.rs  mod.rs  scale.rs
