[package]
name = "cherrymx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.9.3"
serde = { version = "1.0.196", features = ["derive"] }
hex = "0.4.3"
gtk = { version = "0.8.0", package = "gtk4", features = ["v4_6"] }
serde_json = "1.0"
dirs = "5.0.1"
users = "0.11.0"
